--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 </div>
                 <div class="stat-item">
                     <div class="stat-label">Total Points</div>
-                    <div class="stat-value" id="overviewPointsWon">0</div>/<div class="stat-value" id="totalPoints">0</div>
+                    <div class="stat-value" id="overviewPointsWon"> / <id="totalPoints">0</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-label">Avg Position</div>
