reinstated avg position

--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
                 <span id="overviewPointsWon">0</span> / <span id="totalPoints">0</span>
             </div>
         </div>
+		        <div class="stat-item">
+            <div class="stat-label">Avg Position</div>
+            <div class="stat-value" id="avgPosition">-</div>
+        </div>
         <div class="stat-item">
             <div class="stat-label">Active Bowlers</div>
             <div class="stat-value" id="activeBowlers">0</div>
