--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         ];
         const upcomingFixtures = [
             
-            { week: 4, date: "2025-09-30", lane: "5", opponent: "Lord Of The Pins",	bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
+            { week: 4, date: "2025-09-30", lane: "5", opponent: "Lord Of The Pins",	bowler1: "Jimbo", bowler2: "Chris/Paul/Ricky", bowler3: "Will", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 5, date: "2025-10-07", lane: "3", opponent: "Smokies",			bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 6, date: "2025-10-14", lane: "11", opponent: "Spectre",			bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 7, date: "2025-10-21", lane: "8", opponent: "Couldn't Give A Split",	bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
