--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         ];
         const upcomingFixtures = [
             
-            { week: 5, date: "2025-10-07", lane: "3", opponent: "Smokies",			bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
+            { week: 5, date: "2025-10-07", lane: "3", opponent: "Smokies",			bowler1: "Jimbo", bowler2: "Paul", bowler3: "Ricky", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 6, date: "2025-10-14", lane: "11", opponent: "Spectre",			bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 7, date: "2025-10-21", lane: "8", opponent: "Couldn't Give A Split",	bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 8, date: "2025-10-28", lane: "2", opponent: "BYE",			bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
