--- a/index.html
+++ b/index.html
@@ -431,11 +431,11 @@ or<!DOCTYPE html>
             { week: 6, date: "2025-10-14", lane: "11", 	opponent: "Spectre",         		bowler1: "Chris", 	bowler2: "Jimbo", 	bowler3: "Will",	pointsWon: 8, pointsLost: 0, position: 3 },
             { week: 7, date: "2025-10-21", lane: "8", 	opponent: "Couldn't Give A Split",	bowler1: "Jayden",	bowler2: "Jimbo",	bowler3: "Will",	pointsWon: 0, pointsLost: 8, position: 5 },
             { week: 8, date: "2025-10-28", lane: "2", 	opponent: "BYE",					bowler1: "Chris",	bowler2: "Jimbo",	bowler3: "Ricky",	pointsWon: 4, pointsLost: 4, position: 5 },
-		
+			{ week: 9, date: "2025-11-04", lane: "10", 	opponent: "Gutter Gang",			bowler1: "Jimbo", 	bowler2: "Paul", 	bowler3: "Will", 	pointsWon: 6, pointsLost: 2, position: 0 },
+            
 		];
         const upcomingFixtures = [
             
-            { week: 9, date: "2025-11-04", lane: "10", opponent: "Gutter Gang",		bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 10, date: "2025-11-11", lane: "4", opponent: "Phoenix",		bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 11, date: "2025-11-18", lane: "6", opponent: "Alley Cats",		bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 12, date: "2025-11-25", lane: "12", opponent: "Power Play - Shipley",	bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
