--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ or<!DOCTYPE html>
 		];
         const upcomingFixtures = [
             
-            { week: 10, date: "2025-11-11", lane: "4", opponent: "Phoenix",		bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
+            { week: 10, date: "2025-11-11", lane: "4", opponent: "Phoenix",		bowler1: "Jimbo", bowler2: "Paul", bowler3: "Will", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 11, date: "2025-11-18", lane: "6", opponent: "Alley Cats",		bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 12, date: "2025-11-25", lane: "12", opponent: "Power Play - Shipley",	bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
             { week: 13, date: "2025-12-02", lane: "10", opponent: "Enigma", 		bowler1: "TBC", bowler2: "TBC", bowler3: "TBC", pointsWon: 0, pointsLost: 0, position: 0 },
